Acutally install deb-version.5 manpage
Add to man/Makefile.am and debian/dpkg-dev.install

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -56,6 +56,7 @@ dist_man_MANS = \
 	822-date.1 \
 	cleanup-info.8 \
 	deb-control.5 \
+	deb-version.5 \
 	deb-shlibs.5 \
 	deb-substvars.5 \
 	deb-symbols.5 \
