Add deb-version.5 to po4a.cfg
Also update dpkg-man.pot and related .po files.

--- a/man/po/po4a.cfg
+++ b/man/po/po4a.cfg
@@ -33,6 +33,11 @@
            add_$lang:$(srcdir)/po/$lang.add
 
 
+[type:man] $(srcdir)/deb-version.5              \
+           $lang:$lang/deb-version.5            \
+           add_$lang:$(srcdir)/po/$lang.add
+
+
 [type:man] $(srcdir)/deb-old.5                  \
            $lang:$lang/deb-old.5                \
            add_$lang:$(srcdir)/po/$lang.add
