Fix override disparity: set priority of dselect to important

--- a/debian/control
+++ b/debian/control
@@ -47,6 +47,7 @@ Description: package building tools for Debian
  for example, most packages need the `make' and the C compiler `gcc'.
 
 Package: dselect
+Priority: important
 Architecture: any
 Depends: ${shlibs:Depends}, dpkg (>= 1.13.1)
 Replaces: dpkg (<< 1.10.3)
