--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -15,8 +15,16 @@ scripts/dpkg-shlibdeps.pl
 scripts/dpkg-source.pl
 scripts/changelog/debian.pl
 scripts/Dpkg/Arch.pm
+scripts/Dpkg/Cdata.pm
+scripts/Dpkg/Changelog.pm
+scripts/Dpkg/Changelog/Debian.pm
+scripts/Dpkg/Control.pm
+scripts/Dpkg/Deps.pm
+scripts/Dpkg/ErrorHandling.pm
+scripts/Dpkg/Fields.pm
 scripts/Dpkg/Shlibs.pm
 scripts/Dpkg/Shlibs/Objdump.pm
 scripts/Dpkg/Shlibs/SymbolFile.pm
+scripts/Dpkg/Substvars.pm
+scripts/Dpkg/Vars.pm
 scripts/Dpkg/Version.pm
-scripts/Dpkg/ErrorHandling.pm
