Promote bzip2 Recommends to Depends for dpkg-dev
Closes: #458521

--- a/debian/control
+++ b/debian/control
@@ -34,9 +34,9 @@ Package: dpkg-dev
 Section: utils
 Priority: optional
 Architecture: all
-Depends: dpkg (>= 1.14.6), perl5, perl-modules, cpio (>= 2.4.2-2),
+Depends: dpkg (>= 1.14.6), perl5, perl-modules, cpio (>= 2.4.2-2), bzip2,
  patch (>= 2.2-1), make, binutils
-Recommends: gcc | c-compiler, bzip2
+Recommends: gcc | c-compiler
 Suggests: gnupg, debian-keyring
 Conflicts: dpkgname, dpkg-cross (<< 2.0.0)
 Replaces: dpkgname, dpkg (<< 1.4.1.8), dpkg-doc-ja, manpages-pl (<= 20051117-1)
