--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,7 @@ Package: dpkg-dev
 Section: utils
 Priority: optional
 Architecture: all
-Depends: dpkg (>= 1.14.6), perl5, perl-modules, cpio (>= 2.4.2-2), bzip2,
+Depends: dpkg (>= 1.14.6), perl5, perl-modules, cpio (>= 2.4.2-2), bzip2, lzma,
  patch (>= 2.2-1), make, binutils
 Recommends: gcc | c-compiler
 Suggests: gnupg, debian-keyring
