--- a/debian/control
+++ b/debian/control
@@ -37,7 +37,7 @@ Priority: optional
 Architecture: all
 Depends: dpkg (>= 1.14.6), perl5, perl-modules, cpio (>= 2.4.2-2), bzip2, lzma,
  patch (>= 2.2-1), make, binutils
-Recommends: gcc | c-compiler
+Recommends: gcc | c-compiler, build-essential
 Suggests: gnupg, debian-keyring
 Conflicts: dpkgname, dpkg-cross (<< 2.0.0)
 Replaces: dpkgname, dpkg (<< 1.4.1.8), dpkg-doc-ja, manpages-pl (<= 20051117-1)
