--- a/configure.ac
+++ b/configure.ac
@@ -85,8 +85,8 @@ AC_TYPE_MODE_T
 AC_TYPE_PID_T
 AC_TYPE_SIZE_T
 DPKG_TYPE_PTRDIFF_T
-AC_CHECK_SIZEOF(unsigned int)
-AC_CHECK_SIZEOF(unsigned long)
+AC_CHECK_SIZEOF([unsigned int])
+AC_CHECK_SIZEOF([unsigned long])
 DPKG_DECL_SYS_SIGLIST
 DPKG_C_ATTRIBUTE
 
