Demote dselect from priority important to optional
Closes: #461327

--- a/debian/control
+++ b/debian/control
@@ -49,7 +49,7 @@ Description: package building tools for Debian
  for example, most packages need the `make' and the C compiler `gcc'.
 
 Package: dselect
-Priority: important
+Priority: optional
 Architecture: any
 Depends: ${shlibs:Depends}, dpkg (>= 1.13.1)
 Replaces: dpkg (<< 1.10.3)
