s-s-d: Refactor max open fd into a new function and coalesce close loop

--- a/configure.ac
+++ b/configure.ac
@@ -93,7 +93,7 @@ DPKG_C_ATTRIBUTE
 # Checks for library functions.
 DPKG_FUNC_VA_COPY
 AC_CHECK_FUNCS([vsnprintf snprintf strerror strsignal scandir alphasort])
-AC_CHECK_FUNCS([unsetenv lchown setsid bcopy isascii memcpy]) 
+AC_CHECK_FUNCS([unsetenv lchown setsid bcopy isascii memcpy getdtablesize])
 
 SJR_COMPILER_WARNINGS
 SJR_COMPILER_OPTIMISATIONS
