--- a/dpkg-split/Makefile.am
+++ b/dpkg-split/Makefile.am
@@ -2,7 +2,7 @@
 
 localedir = $(datadir)/locale
 INCLUDES = \
-	-DLOCALEDIR=\"$(localedir)\" -I$(top_srcdir)/intl \
+	-DLOCALEDIR=\"$(localedir)\" \
 	-DADMINDIR=\"$(admindir)\" -DMKSPLITSCRIPT=\"$(pkglibdir)/mksplit\" \
 	-I$(top_srcdir)/lib
 
