--- a/dselect/Makefile.am
+++ b/dselect/Makefile.am
@@ -4,7 +4,7 @@ SUBDIRS = methods po
 
 localedir = $(datadir)/locale
 INCLUDES = \
-	-DLOCALEDIR=\"$(localedir)\" -I$(top_srcdir)/intl \
+	-DLOCALEDIR=\"$(localedir)\" \
 	-DADMINDIR=\"$(admindir)\" -DLIBDIR=\"$(pkglibdir)\" \
 	-I$(top_srcdir)/lib
 
