Add libtimedate-perl to dpkg-dev's Depends and to Build-Depends
* debian/control: Add libtimedate-perl to
dpkg-dev's Depends and to Build-Depends (for
build-time tests). This introduces our first
run-time dependency on a perl module not shipped
with Perl itself. But to me it seems not worth
trying to replace that code.

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Standards-Version: 3.7.3
 Build-Depends: debhelper (>= 4.1.81), pkg-config, po4a (>= 0.23),
  libncurses5-dev | libncurses-dev, zlib1g-dev (>= 1:1.1.3-19.1), libbz2-dev,
  libselinux1-dev (>= 1.28-4) [!hurd-i386 !kfreebsd-i386 !kfreebsd-amd64],
- libio-string-perl
+ libtimedate-perl, libio-string-perl
 
 Package: dpkg
 Architecture: any
@@ -36,7 +36,7 @@ Section: utils
 Priority: optional
 Architecture: all
 Depends: dpkg (>= 1.14.6), perl5, perl-modules, cpio (>= 2.4.2-2), bzip2, lzma,
- patch (>= 2.2-1), make, binutils
+ patch (>= 2.2-1), make, binutils, libtimedate-perl
 Recommends: gcc | c-compiler, build-essential
 Suggests: gnupg, debian-keyring
 Conflicts: dpkgname, dpkg-cross (<< 2.0.0)
