Move dpkg Breaks on dpkg-dev (= 1.14.13) and (= 1.14.14) to Conflicts
So that users from etch can upgrade to sid (or lenny once dpkg has
migrated). Those Conflicts should be removed before lenny's release.

--- a/debian/control
+++ b/debian/control
@@ -18,9 +18,8 @@ Package: dpkg
 Architecture: any
 Essential: yes
 Pre-Depends: ${shlibs:Depends}, coreutils (>= 5.93-1)
-Breaks: dpkg-dev (= 1.14.13), dpkg-dev (= 1.14.14)
 Conflicts: sysvinit (<< 2.82-1), dpkg-iasearch (<< 0.11), dpkg-static,
- dpkg-dev (<< 1.14.6)
+ dpkg-dev (<< 1.14.6), dpkg-dev (= 1.14.13), dpkg-dev (= 1.14.14)
 Replaces: dpkg-doc-ja, dpkg-static, manpages-de (<= 0.4-3),
  manpages-pl (<= 20051117-1)
 Suggests: apt, lzma
