Dpkg::Source::Compressor: handle on-the-fly compression
* scripts/Dpkg/Source/Compressor.pm: This new module knows how
to compress/uncompress streams of data. It supports all the
compression types defined in Dpkg::Compression.

--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -26,6 +26,8 @@ scripts/Dpkg/IPC.pm
 scripts/Dpkg/Shlibs.pm
 scripts/Dpkg/Shlibs/Objdump.pm
 scripts/Dpkg/Shlibs/SymbolFile.pm
+scripts/Dpkg/Source/Compressor.pm
+scripts/Dpkg/Source/VCS/git.pm
 scripts/Dpkg/Substvars.pm
 scripts/Dpkg/Vars.pm
 scripts/Dpkg/Version.pm
