Dpkg::Source::Archiver: new module to work with tar archives
* scripts/Dpkg/Source/Archive.pm: New module handling tar
archive creation and extraction.
* scripts/dpkg-source.pl: Updated and simplified to use the new module.
* scripts/Makefile.am: Add new modules to dist tarball.
* scripts/po/POTFILES.in: Add new module in list of files to scan for
translations.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -104,6 +104,8 @@ nobase_dist_perllib_DATA = \
 	Dpkg/Substvars.pm \
 	Dpkg/Vars.pm \
 	Dpkg/Version.pm \
+	Dpkg/Source/Archiver.pm \
+	Dpkg/Source/Compressor.pm \
 	Dpkg/Source/VCS/git.pm \
 	Dpkg.pm
 
