--- a/debian/dpkg.cfg
+++ b/debian/dpkg.cfg
@@ -5,5 +5,9 @@
 # the option, separated by whitespace and/or an `=' sign.
 #
 
+# Do not enable debsig-verify by default; since the distribution is not using
+# embedded signatures, debsig-verify would reject all packages.
+no-debsig
+
 # Log status changes and actions to a file.
 log /var/log/dpkg.log
