* man/po/po4a.cfg: Also translate deb-symbols.5

--- a/man/po/po4a.cfg
+++ b/man/po/po4a.cfg
@@ -58,6 +58,11 @@
            add_$lang:$(srcdir)/po/$lang.add
 
 
+[type:man] $(srcdir)/deb-symbols.5              \
+           $lang:$lang/deb-symbols.5            \
+           add_$lang:$(srcdir)/po/$lang.add
+
+
 [type:man] $(srcdir)/dpkg.1                     \
            $lang:$lang/dpkg.1                   \
            add_$lang:$(srcdir)/po/$lang.add
