--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -112,6 +112,7 @@ nobase_dist_perllib_DATA = \
 	Dpkg/Source/Functions.pm \
 	Dpkg/Source/Package.pm \
 	Dpkg/Source/Package/V1_0.pm \
+	Dpkg/Source/Package/V1_0/native.pm \
 	Dpkg/Source/Package/V2_0.pm \
 	Dpkg/Source/Patch.pm \
 	Dpkg/Source/VCS/git.pm \
