--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -27,11 +27,11 @@ libdpkg_a_SOURCES = \
 	md5.c md5.h \
 	mlib.c \
 	myopt.c myopt.h \
+	myopt-util.c \
 	nfmalloc.c \
 	parse.c \
 	parsehelp.c \
 	parsedump.h \
-	showcright.c \
 	showpkg.c \
 	tarfn.c tarfn.h \
 	utils.c \
