--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -115,6 +115,7 @@ nobase_dist_perllib_DATA = \
 	Dpkg/Source/Package/V2_0.pm \
 	Dpkg/Source/Package/V3_0/native.pm \
 	Dpkg/Source/Package/V3_0/git.pm \
+	Dpkg/Source/Package/V3_0/quilt.pm \
 	Dpkg/Source/Patch.pm \
 	Dpkg.pm
 
