--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -37,6 +37,7 @@ scripts/Dpkg/Source/Package/V1_0.pm
 scripts/Dpkg/Source/Package/V2_0.pm
 scripts/Dpkg/Source/Package/V3_0/native.pm
 scripts/Dpkg/Source/Package/V3_0/git.pm
+scripts/Dpkg/Source/Package/V3_0/quilt.pm
 scripts/Dpkg/Substvars.pm
 scripts/Dpkg/Vars.pm
 scripts/Dpkg/Version.pm
