--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -35,6 +35,7 @@ scripts/Dpkg/Source/Patch.pm
 scripts/Dpkg/Source/Package.pm
 scripts/Dpkg/Source/Package/V1_0.pm
 scripts/Dpkg/Source/Package/V2_0.pm
+scripts/Dpkg/Source/Package/V3_0/bzr.pm
 scripts/Dpkg/Source/Package/V3_0/native.pm
 scripts/Dpkg/Source/Package/V3_0/git.pm
 scripts/Dpkg/Source/Package/V3_0/quilt.pm
