New source package format "3.0 (custom)"
* scripts/Dpkg/Source/Package/V3_0/custom.pm: Module implementing
a fake source package format. It provides a convenient way to generate
a source package containing arbitrary files. It's meant to be used
by helper tools like git-buildpackage or svn-buildpackage.
* scripts/Makefile.am, scripts/po/POTFILES.in: Register the above
file.

--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -36,6 +36,7 @@ scripts/Dpkg/Source/Package.pm
 scripts/Dpkg/Source/Package/V1_0.pm
 scripts/Dpkg/Source/Package/V2_0.pm
 scripts/Dpkg/Source/Package/V3_0/bzr.pm
+scripts/Dpkg/Source/Package/V3_0/custom.pm
 scripts/Dpkg/Source/Package/V3_0/native.pm
 scripts/Dpkg/Source/Package/V3_0/git.pm
 scripts/Dpkg/Source/Package/V3_0/quilt.pm
