--- a/debian/rules
+++ b/debian/rules
@@ -66,7 +66,9 @@ build: build-tree/config.status
 check: build
 	dh_testdir
 
+ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
 	cd build-tree && $(MAKE) check
+endif
 
 # Install the package underneath debian/tmp
 install: check
