Implement triggers support
Closes: #17243, #68981, #215374, #217622, #248693, #308285

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,6 +26,7 @@ EXTRA_DIST = \
 	README.api \
 	README.feature-removal-schedule \
 	README.translators \
+	doc/triggers.txt \
 	debian/archtable \
 	debian/changelog \
 	debian/compat \
