--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -17,6 +17,8 @@ lib/parsehelp.c
 lib/showcright.c
 lib/showpkg.c
 lib/tarfn.c
+lib/trigdeferred.c
+lib/triglib.c
 lib/utils.c
 lib/varbuf.c
 lib/vercmp.c
@@ -35,6 +37,8 @@ src/processarc.c
 src/query.c
 src/remove.c
 src/select.c
+src/trigcmd.c
+src/trigproc.c
 src/update.c
 
 dpkg-deb/build.c
