--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,6 @@
 # This is the list of all source files with translatable strings.
 
+lib/cleanup.c
 lib/compat.c
 lib/compression.c
 lib/database.c
@@ -8,13 +9,14 @@ lib/dump.c
 lib/ehandle.c
 lib/fields.c
 lib/lock.c
+lib/log.c
 lib/md5.c
 lib/mlib.c
 lib/myopt.c
+lib/myopt-util.c
 lib/nfmalloc.c
 lib/parse.c
 lib/parsehelp.c
-lib/showcright.c
 lib/showpkg.c
 lib/tarfn.c
 lib/trigdeferred.c
