po/POTFILES.in: Rename 'lib/trigdeferred.c' to 'lib/trigdeferred.l'
The latter is the actual source. Fixes a build failure when updating
the pot file and top_srcdir != top_builddir.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -19,7 +19,7 @@ lib/parse.c
 lib/parsehelp.c
 lib/showpkg.c
 lib/tarfn.c
-lib/trigdeferred.c
+lib/trigdeferred.l
 lib/triglib.c
 lib/utils.c
 lib/varbuf.c
