Add trigger man pages and update dpkg with triggers information

--- a/man/po/po4a.cfg
+++ b/man/po/po4a.cfg
@@ -63,6 +63,11 @@
            add_$lang:$(srcdir)/po/$lang.add
 
 
+[type:man] $(srcdir)/deb-triggers.5             \
+           $lang:$lang/deb-triggers.5           \
+           add_$lang:$(srcdir)/po/$lang.add
+
+
 [type:man] $(srcdir)/dpkg.1                     \
            $lang:$lang/dpkg.1                   \
            add_$lang:$(srcdir)/po/$lang.add
@@ -155,6 +160,11 @@
 
 [type:man] $(srcdir)/dpkg-statoverride.8        \
            $lang:$lang/dpkg-statoverride.8      \
+           add_$lang:$(srcdir)/po/$lang.add
+
+
+[type:man] $(srcdir)/dpkg-trigger.1             \
+           $lang:$lang/dpkg-trigger.1           \
            add_$lang:$(srcdir)/po/$lang.add
 
 
