Cleanup of various Conflicts/Replaces

--- a/debian/control
+++ b/debian/control
@@ -19,11 +19,9 @@ Package: dpkg
 Architecture: any
 Essential: yes
 Pre-Depends: ${shlibs:Depends}, coreutils (>= 5.93-1)
-Conflicts: sysvinit (<< 2.82-1), dpkg-iasearch (<< 0.11), dpkg-static,
- dpkg-dev (<< 1.14.6), dpkg-dev (= 1.14.13), dpkg-dev (= 1.14.14),
- apt (<< 0.7.7), aptitude (<< 0.4.7-1)
-Replaces: dpkg-doc-ja, dpkg-static, manpages-de (<= 0.4-3),
- manpages-pl (<= 20051117-1)
+Conflicts: sysvinit (<< 2.82-1), dpkg-iasearch (<< 0.11),
+ dpkg-dev (<< 1.14.16), apt (<< 0.7.7), aptitude (<< 0.4.7-1)
+Replaces: manpages-de (<= 0.4-3), manpages-pl (<= 20051117-1)
 Suggests: apt, lzma
 Description: package maintenance system for Debian
  This package contains the low-level commands for handling the installation
@@ -40,8 +38,8 @@ Depends: dpkg (>= 1.14.6), perl5, perl-modules, cpio (>= 2.4.2-2), bzip2, lzma,
  patch (>= 2.2-1), make, binutils, libtimedate-perl
 Recommends: gcc | c-compiler, build-essential
 Suggests: gnupg, debian-keyring
-Conflicts: dpkgname, dpkg-cross (<< 2.0.0)
-Replaces: dpkgname, dpkg (<< 1.4.1.8), dpkg-doc-ja, manpages-pl (<= 20051117-1)
+Conflicts: dpkg-cross (<< 2.0.0), devscripts (<< 2.10.26)
+Replaces: manpages-pl (<= 20051117-1)
 Description: package building tools for Debian
  This package contains the tools (including dpkg-source) required to
  unpack, build and upload Debian source packages.
