Fix link order when using libcompat.a and libintl.a
Place them after libdpkg.a.
Based on a patch by Martin Koeppe. Closes: #481805

--- a/dpkg-deb/Makefile.am
+++ b/dpkg-deb/Makefile.am
@@ -17,5 +17,10 @@ dpkg_deb_SOURCES = \
 	main.c
 
 dpkg_deb_LDADD = \
+	../lib/libdpkg.a \
 	../libcompat/libcompat.a \
-	$(LIBINTL) ../lib/libdpkg.a $(ZLIB_LIBS) $(BZ2_LIBS) $(SELINUX_LIBS)
+	$(LIBINTL) \
+	$(ZLIB_LIBS) \
+	$(BZ2_LIBS) \
+	$(SELINUX_LIBS)
+
