--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -42,4 +42,5 @@ scripts/Dpkg/Source/Package/V3/git.pm
 scripts/Dpkg/Source/Package/V3/quilt.pm
 scripts/Dpkg/Substvars.pm
 scripts/Dpkg/Vars.pm
+scripts/Dpkg/Vendor.pm
 scripts/Dpkg/Version.pm
