--- a/debian/control
+++ b/debian/control
@@ -18,11 +18,11 @@ Build-Depends: debhelper (>= 4.1.81), pkg-config, po4a (>= 0.33.1),
 Package: dpkg
 Architecture: any
 Essential: yes
-Pre-Depends: ${shlibs:Depends}, coreutils (>= 5.93-1)
+Pre-Depends: ${shlibs:Depends}, coreutils (>= 5.93-1), lzma
 Conflicts: sysvinit (<< 2.82-1), dpkg-iasearch (<< 0.11),
  dpkg-dev (<< 1.14.16), apt (<< 0.7.7), aptitude (<< 0.4.7-1)
 Replaces: manpages-de (<= 0.4-3), manpages-pl (<= 20051117-1)
-Suggests: apt, lzma
+Suggests: apt
 Description: Debian package management system
  This package privides the low-level infrastructure for handling the
  installation and removal of Debian software packages.
