--- a/configure.ac
+++ b/configure.ac
@@ -93,10 +93,10 @@ DPKG_C_ATTRIBUTE
 
 # Checks for library functions.
 DPKG_FUNC_VA_COPY
-DPKG_CHECK_COMPAT_FUNCS([getopt getopt_long strnlen obstack_free])
-AC_CHECK_FUNCS([vsnprintf snprintf strtoul strerror strsignal alphasort \
-                isascii bcopy memcpy scandir unsetenv lchown setsid \
-                getdtablesize])
+DPKG_CHECK_COMPAT_FUNCS([getopt getopt_long obstack_free \
+                         vsnprintf snprintf strnlen strerror strsignal \
+                         scandir alphasort unsetenv])
+AC_CHECK_FUNCS([strtoul isascii bcopy memcpy lchown setsid getdtablesize])
 
 SJR_COMPILER_WARNINGS
 SJR_COMPILER_OPTIMISATIONS
