Fix typo in package description ('privides' -> 'provides')
Closes: #510755

Reported-by: Pascal De Vuyst <pascal.devuyst@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Conflicts: sysvinit (<< 2.82-1), dpkg-iasearch (<< 0.11),
 Replaces: manpages-de (<= 0.4-3), manpages-pl (<= 20051117-1)
 Suggests: apt
 Description: Debian package management system
- This package privides the low-level infrastructure for handling the
+ This package provides the low-level infrastructure for handling the
  installation and removal of Debian software packages.
  .
  For Debian package development tools, install dpkg-dev.
