Cleanup .gitignore files
Move common ignore matches to the top-level .gitignore.
Force directory matching by adding a trailing /.
Remove unused matches (enoent).
Add missing matches (t.tmp and autom4te.cache/).

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
-build-tree
-config
-ABOUT-NLS
-INSTALL
+# Inherited ignores
+*.a
+*.o
+.deps/
 Makefile
 Makefile.in
+
+# Top dir ignores
+autom4te.cache/
+build-tree/
+config/
+ABOUT-NLS
+INSTALL
 configure
 config.*
 aclocal.m4
