--- a/scripts/.gitignore
+++ b/scripts/.gitignore
@@ -1,5 +1,3 @@
-Makefile
-Makefile.in
 dpkg-architecture
 dpkg-buildpackage
 dpkg-checkbuilddeps
@@ -20,3 +18,4 @@ install-info
 install-info-stamp
 cleanup-info
 822-date
+t.tmp
