--- a/t-conffile-replaces-disappear/Makefile
+++ b/t-conffile-replaces-disappear/Makefile
@@ -13,23 +13,27 @@ cmp ref-conffile /test-conffile
 endef
 
 test-two-run-ordered:
+	# test-two-run-ordered
 	$(DPKG_INSTALL) pkg-conff-original.deb
 	$(DPKG_INSTALL) pkg-conff-takeover.deb
 	$(VERIFY)
 	$(DPKG_PURGE) pkg-conff-original pkg-conff-takeover
 
 test-one-run-ordered:
+	# test-one-run-ordered
 	$(DPKG_INSTALL) pkg-conff-original.deb pkg-conff-takeover.deb
 	$(VERIFY)
 	$(DPKG_PURGE) pkg-conff-original pkg-conff-takeover
 
 test-two-run-reverse:
+	# test-two-run-reverse
 	$(DPKG_INSTALL) pkg-conff-takeover.deb
 	$(DPKG_INSTALL) pkg-conff-original.deb
 	$(VERIFY)
 	$(DPKG_PURGE) pkg-conff-original pkg-conff-takeover
 
 test-one-run-reverse:
+	# test-one-run-reverse
 	$(DPKG_INSTALL) pkg-conff-takeover.deb pkg-conff-original.deb
 	$(VERIFY)
 	$(DPKG_PURGE) pkg-conff-original pkg-conff-takeover
