New framework to hook vendor-specific logic
* scripts/Dpkg/Vendor/Default.pm: Generic vendor object that will
be used to hook vendor-specific behaviour in multiple places.
* scripts/Dpkg/Vendor/Debian.pm: Debian variant of that object.
* scripts/Dpkg/Vendor.pm (get_vendor_object, run_vendor_hook):
New functions to retrieve the current vendor object and run
vendor-specific code.
* scripts/dpkg-source.pl, scripts/dpkg-genchanges.pl: Add first
vendor hooks to be used by Ubuntu.
* scripts/Makefile.am (EXTRA_DIST): Add
'scripts/Dpkg/Vendor/Default.pm' and 'scripts/Dpkg/Vendor/Debian.pm'.

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -120,6 +120,8 @@ nobase_dist_perllib_DATA = \
 	Dpkg/Substvars.pm \
 	Dpkg/Vars.pm \
 	Dpkg/Vendor.pm \
+	Dpkg/Vendor/Debian.pm \
+	Dpkg/Vendor/Default.pm \
 	Dpkg/Version.pm \
 	Dpkg.pm
 
