Add Ubuntu vendor object
* scripts/Dpkg/Vendor/Ubuntu.pm: Ubuntu vendor object implementing
lookup of launchpad bugs in changelogs and a safety-check for
Maintainer fields of forked packages (launched during source
build).

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -122,6 +122,7 @@ nobase_dist_perllib_DATA = \
 	Dpkg/Vendor.pm \
 	Dpkg/Vendor/Debian.pm \
 	Dpkg/Vendor/Default.pm \
+	Dpkg/Vendor/Ubuntu.pm \
 	Dpkg/Version.pm \
 	Dpkg.pm
 
