--- a/scripts/po/POTFILES.in
+++ b/scripts/po/POTFILES.in
@@ -43,4 +43,5 @@ scripts/Dpkg/Source/Package/V3/quilt.pm
 scripts/Dpkg/Substvars.pm
 scripts/Dpkg/Vars.pm
 scripts/Dpkg/Vendor.pm
+scripts/Dpkg/Vendor/Ubuntu.pm
 scripts/Dpkg/Version.pm
