--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,7 +21,7 @@ dpkg_SOURCES = \
 	help.c \
 	main.c main.h \
 	packages.c \
-	pkg-list.c \
+	pkg-array.c \
 	pkg-show.c \
 	processarc.c \
 	remove.c \
@@ -39,7 +39,7 @@ dpkg_LDADD = \
 
 dpkg_query_SOURCES = \
 	filesdb.c filesdb.h \
-	pkg-list.c \
+	pkg-array.c \
 	pkg-show.c \
 	query.c
 
