Move update-alternatives, dpkg-divert and dpkg-statoverride to /usr/bin
* scripts/Makefile.am: Move update-alternatives, dpkg-divert and
dpkg-statoverride to /usr/bin as they can be useful to users since
they have --display or --list options that do not require
administrative rights.
* Makefile.am (EXTRA_DIST): Add debian/dpkg.links

--- a/Makefile.am
+++ b/Makefile.am
@@ -43,6 +43,7 @@ EXTRA_DIST = \
 	debian/dpkg.postrm \
 	debian/dpkg.preinst \
 	debian/dpkg.logrotate \
+	debian/dpkg.links \
 	debian/dpkg.lintian-overrides \
 	debian/dselect.cfg \
 	debian/dselect.docs \
