--- a/debian/rules
+++ b/debian/rules
@@ -91,6 +91,7 @@ binary-arch: install
 
 	dh_installchangelogs -a ChangeLog
 	dh_installdocs -a
+	dh_link -a
 
 	install -d debian/dpkg/usr/share/lintian/overrides
 	install -m 644 debian/dpkg.lintian-overrides \
@@ -116,6 +117,7 @@ binary-indep: install
 
 	dh_installchangelogs -i ChangeLog
 	dh_installdocs -i
+	dh_link -i
 
 	install -d debian/dpkg-dev/usr/share/lintian/overrides
 	install -m 644 debian/dpkg-dev.lintian-overrides \
